cabal-version:      3.4
name:               bergamot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Iain Moncrief
maintainer:         moncrief@oregonstate.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Bergamot.MyLib,
        Bergamot.Syntax,
        Bergamot.Unification,
        Bergamot.Parser,
        Bergamot.Runner,
        Control.Monad.Unify.Class,
        Control.Monad.Unify.Trans,
        Control.Monad.State.LGBT,
        Control.Monad.Backtrack,
        -- Control.Monad.Logic,

    -- Modules included in this library but not exported.
    other-modules:


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base,
        transformers,
        containers,
        parsec,
        mtl,
        text,
        logict,
        -- monad-lgbt

    hs-source-dirs:
        src,
        src/Bergamot,
        src/Control/Monad/Unify,
        src/Control/Monad,
        src/Control/Monad/State,

    default-language: GHC2021
